--- a/production/public/css/style.css
+++ b/production/public/css/style.css
@@ -37,6 +37,26 @@ body {
 	margin-bottom: 20px;
 }
 
+.input-squeeze-fix{
+	min-width: 100%;
+}
+
+/* Since search and detail pages have just a tiny bar on top with the title unlike the other pages where WILD CARD is big and centered */
+.title-mini-bar{
+	background-color: white;
+	position: relative;
+}
+
+.title-mini{
+	font-size: 0.6em;
+}
+
+/* Just so the W is not touching the side of the page*/
+.w-push{
+	position:relative;
+	left: 20px;
+}
+
 /********** Landing Page ****************/
 
 .landing-master-div{
@@ -105,7 +125,7 @@ Sign in portion of Landing page
 }
 
 .max-input{
-	max-width: 243.48px;
+	/*max-width: 243.48px;*/
 }
 
 .go-away-regbtn{
@@ -117,6 +137,19 @@ Sign in portion of Landing page
 }
 
 /********** Search Page ****************/
+.search-master-div{
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	-webkit-filter: blur(0.000001px);
+	background-color: #FFFACD;
+}
+
+.search-img{
+	height: 670px;
+}
 
 /*
 Delete Potentials List:
